# opensteno-gamepad

./: .gitignore  CMakeLists.txt  COMPILE.md  README.md  opensteno
opensteno/opensteno/: sdlstenotest.cpp
opensteno/opensteno.xcodeproj/: project.pbxproj
opensteno/opensteno.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
opensteno/opensteno.xcodeproj/project.xcworkspace/xcuserdata/svenjerat2.xcuserdatad/: UserInterfaceState.xcuserstate
opensteno/opensteno.xcodeproj/xcuserdata/svenjerat2.xcuserdatad/xcschemes/: opensteno.xcscheme  xcschememanagement.plist
source/: Steno.cpp  Steno1.cpp  StenoLib.cpp
