cmake_minimum_required(VERSION 2.8)
project(OpenSteno)
set(CMAKE_BUILD_TYPE Debug)
add_executable(${PROJECT_NAME} source/Steno.cpp)
INCLUDE(FindPkgConfig)
PKG_SEARCH_MODULE(SDL2 REQUIRED sdl2)
PKG_SEARCH_MODULE(X11 REQUIRED x11)
INCLUDE_DIRECTORIES(${X11_INCLUDE_DIRS})

pkg_check_modules(LIBNOTIFY REQUIRED libnotify)
include_directories(${LIBNOTIFY_INCLUDE_DIRS})
link_directories(${LIBNOTIFY_LIBRARY_DIRS})

INCLUDE_DIRECTORIES(${SDL2_INCLUDE_DIRS})
target_link_libraries(${PROJECT_NAME} ${LIBNOTIFY_LIBRARIES} ${SDL2_LIBRARIES} ${X11_LIBRARIES} Xtst)
